# avicenna

./: .gitignore  DOCKERFILE  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: coverage.yml  pypi_publish.yml  test_avicenna.yml  testpypi_publish.yml
evaluation/: evaluate_all.py  evaluate_calculator.py  evaluate_calculator_docker.py  evaluate_cookiecutter.py  evaluate_debugging_benchmark.py  evaluate_expression.py  evaluate_fastapi.py  evaluate_heartbleed.py  evaluate_markup.py  evaluate_middle.py  evaluate_pysnooper.py  evaluate_server.py  evaluation_setup.py  example_calculator.py  example_heartbleed.py  example_middle.py  middle.py
evaluation/resources/: heartbeat.py  output.py  seed.py
evaluation/student_assignments/: README.md
evaluation/student_assignments/problem_10_Square-root/: description.json  reference1.py  tests.json
evaluation/student_assignments/problem_11_Merge-two-strings/: description.json  reference1.py  tests.json
evaluation/student_assignments/problem_1_GCD/: description.json  reference1.py  tests.json
evaluation/student_assignments/problem_2_Sieve-of-Eratosthenes/: description.json  reference1.py  tests.json
evaluation/student_assignments/problem_3_nPr/: description.json  reference1.py  tests.json
evaluation/tests4py/: example_cookiecutter_1.py  example_fastapi_1.py  example_pysnooper.py  example_pysnooper_1.py  example_pysnooper_2.py  example_pysnooper_3.py  example_youtubedl.py  example_youtubedl_1.py  example_youtubedl_2.py  example_youtubedl_3.py
evaluation/tests4py_benchmark/: evaluate_cookiecutter_1.py  evaluate_cookiecutter_2.py  evaluate_cookiecutter_3.py  evaluate_fastapi_1.py  evaluate_fastapi_2.py  evaluate_fastapi_3.py  evaluate_fastapi_4.py  evaluate_pysnooper_1.py  evaluate_pysnooper_2.py  evaluate_youtubedl_1.py  evaluate_youtubedl_2.py  evaluate_youtubedl_3.py
notebooks/: README.md  calculator.ipynb  debugging-benchmark.ipynb  division.ipynb  example_calculator.py  harness.py  heartbleed.ipynb  line_example.ipynb  linetracer.py  markup.ipynb  notebook_seed.py  relevant_features.ipynb  restruct.py  student-assignments.ipynb  tests4py-expression.ipynb  tests4py-markup.ipynb  tests4py-pysnooper.ipynb
notebooks/pipeline/: pipeline.py
notebooks/sfl/: sfl-calculator.ipynb
notebooks/tests4py/: tests4py.ipynb
src/avicenna/: __init__.py  alhazen.py  av_isla.py  avicenna.py  avicenna_new.py  cli.py  core.py  debug.py  defaults.py  diagnostic.py  evaluation_setup.py  execution_handler.py  feature_collector.py  feature_extractor.py  features.py  generator.py  helpers.py  input.py  islearn.py  learner.py  logger.py  monads.py  oracle.py  oracle_construction.py  pattern_learner.py  performance_evaluator.py  report.py  result_table.py  treetools.py
src/avicenna/data/: __init__.py  input_data.py  (+1 more)
src/avicenna_formalizations/: __init__.py  calculator.py  fastapi_api.py  genson.py  heartbeat.py  middle.py  patterns.toml  patterns_islearn.toml  t4p_common.py  test_subjects.py  tests4py.py
tests/: test_alhazen.py  test_atomic_candidate_instantiation.py  test_avicenna.py  test_avicenna_islearn.py  test_constraint_eval.py  test_exhaustive_pattern_learner.py  test_exhaustivepatternlearner.py  test_features.py  test_generator.py  test_generator_engine.py  test_heartbeat.py  test_heuristic_learner.py  test_inputElementLearner.py  test_islearn.py  test_learning_candidates.py  test_monads.py  test_oracle_construction.py  test_pattern_learner.py  test_patternrepository.py  test_relevant_feature_learner.py  test_relevant_input_extraction.py  test_runner.py  test_tables.py  test_test_inputs.py  test_truthTable.py
tests/learning/: test_exhaustive_pattern_learner.py  test_learning_candidates.py  test_tables.py
tests/resources/: subjects.py
(+395 files in other folders)
