[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avicenna"
version = "0.9.1"
authors = [
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
keywords = [ "debugging"]
requires-python = ">=3.12"
dependencies = [
    "fuzzingbook==1.1",
    "shap>=0.45",
    "lightgbm>=4.3.0",
    "pandas>=2.1.0",
    "numpy>=1.23.2",
    "scikit-learn>=1.1.2",
    "returns>=0.22.0",
    "jupyter",
    "isla-solver~=1.14.4",
    "psutil~=5.9.6",
    "tests4py @ git+https://github.com/martineberlein/Tests4Py",
    "islearn @ git+https://github.com/martineberlein/islearn.git",
    "debugging_benchmark @ git+https://github.com/martineberlein/debugging-benchmark.git@stable",
    "docker~=7.1.0"
]

[project.urls]
"Homepage" = "https://github.com/martineberlein/avicenna"
"Bug Tracker" = "https://github.com/martineberlein/avicenna/issues"

[project.optional-dependencies]
dev = [
    "twine",
    "black",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
]

[tool.setuptools.package-data]
"avicenna" = ["resources/*"]
