[metadata]
name = avicenna
version = 0.9.0
description = AVICENNA: Semantic Debugging
author = Martin Eberlein
author_email = martin.eberlein@informatik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martineberlein/semantic-debugging
project_urls =
    Bug Tracker = https://github.com/martineberlein/semantic-debugging/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
install_requires =
    fuzzingbook~=1.2.1
    isla-solver>=1.14.1
    islearn>=0.2.15
    shap>=0.44
    lightgbm>=4.3.0
    pandas>=2.2.0
    numpy>=1.23.2
    scikit-learn>=1.1.2
packages = find:
package_dir = =src

[options.package_data]
* = *.toml

[options.extras_require]
dev =
    pytest>=7.2.0
    twine
    flaky>=3.7.0

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    avicenna=avicenna.cli:main
